<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CINESCAPE</string>
    <string name="facebook_app_id">1138366336951245</string>
    <string name="fb_login_protocol_scheme">fb1138366336951245</string>
    <string name="facebook_client_token">ee8c03752ee252fb0434fa5ec8599cf8</string>
    <string name="username">User Name / Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="available_bank_offers">Available bank offers</string>
    <string name="not_register">Not registered?" "</string>
    <string name="not_registers">Not registered?</string>
    <string name="login_btn">Sign in</string>
    <string name="or">or</string>
    <string name="sign_up">Sign up</string>
    <string name="continueAs">Continue as " "</string>
    <string name="guest"> Guest</string>
    <string name="sign_in">Sign in</string>
    <string name="skip">Skip</string>
    <string name="and_proceed">and proceed</string>
    <string name="have_club_card">Have a Club Card? " "</string>
    <string name="activate">Activate</string>
    <string name="have_an_account">Have an account? " "</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="receive_promotional_emails">Receive promotional emails</string>
    <string name="receive_promotional_mobile_notification">Receive promotional mobile notifications</string>
    <string name="receive_reservation_notifications">Receive reservation notifications</string>
    <string name="we_recommend_to_keep_the_notifications_on_to_receive_your_reservation_notifications_and_reminders">We recommend to keep the notifications on to receive your reservation notifications and reminders.</string>
    <string name="by_signing_up_i_agree_to_the">By signing up I agree to the" "</string>
    <string name="terms_amp_conditions"><![CDATA[terms & conditions.]]></string>
    <string name="let_s_get_personal">Let\'s get personal</string>
    <string name="choose_prefernces">Choose your preference from the below \n options to help us personalize your experience</string>
    <string name="find_near_me">Find near me</string>
    <string name="cinescape_al_kout">Cinescape Al-Kout</string>
    <string name="seat_category">Seat Category</string>
    <string name="location">Location</string>
    <string name="seat_type">Seat Type</string>
    <string name="experience">Experience</string>
    <string name="age_rating">Age Rating</string>
    <string name="rating">Rating</string>
    <string name="skip_and_proceed">  and proceed</string>
    <string name="done">Done</string>
    <string name="home">HOME</string>
    <string name="movies">MOVIES</string>
    <string name="food">Food</string>
    <string name="account">ACCOUNT</string>
    <string name="more">MORE</string>
    <string name="bombshell">Bombshell</string>
    <string name="text13">13+</string>
    <string name="cinescape_al_muhallab">Cinescape Al Muhallab</string>
    <string name="_9">9</string>
    <string name="screen">Screen</string>
    <string name="screenx">SCREENX</string>
    <string name="date">Date</string>
    <string name="dateTime">Date &amp; Time</string>
    <string name="_04_nov_2020">04 Nov 2020</string>
    <string name="time">Time</string>
    <string name="go_to_booking">Go to Booking</string>
    <string name="go_to_bookings">Go to Bookings</string>
    <string name="you_have_an_upcoming_booking">You have an upcoming booking.</string>
    <string name="upcoming_booking">You have an upcoming bookings.</string>
    <string name="booking_alert">BOOKING ALERT</string>
    <string name="english_action_thriller_horror_128_min">English | Action, Thriller, Horror | 128 min</string>
    <string name="contentDes">contentDescription</string>
    <string name="notify_me">Notify me</string>
    <string name="share">Share</string>
    <string name="cast">Cast</string>
    <string name="joy_rayce">Joy Rayce</string>
    <string name="director">Director</string>
    <string name="genre">Genre</string>
    <string name="languange">Languange</string>
    <string name="synopsis">Synopsis</string>
    <string name="similar_movies_now_showing">Similar movies now showing</string>
    <string name="filters">FILTERS</string>
    <string name="showtimes">ShowTimes</string>
    <string name="movieShowing">Similar movies now showing</string>
    <string name="choose_your_preferred_location">CHOOSE PREFERRED LOCATION</string>
    <string name="you_can_order_only_for">You can order food only for" "</string>
    <string name="today">Today</string>
    <string name="proceed">Proceed</string>
    <string name="cancel_and_go_back">Cancel and go back</string>
    <string name="select_food">SELECT FOOD</string>
    <string name="add">Add</string>
    <string name="minus">-</string>
    <string name="min"> min</string>
    <string name="plus">+</string>
    <string name="cancel">Cancel</string>
    <string name="cancelComma">Cancel &amp;</string>
    <string name="time_left">TIME LEFT</string>
    <string name="seat">Seat </string>
    <string name="ticket_price">Ticket price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="gift_card_value">Gift Card value</string>
    <string name="select_payment_method">Select Payment Methods</string>
    <string name="cinema_food_text">Scan your Booking ID or QR code at any KIOSK or USHER POINT  once you reach the cinema location to start preparing your order.</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="card_number">Card Number</string>
    <string name="credit_card_payment">CREDIT CARD PAYMENT</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="expiry_dateMM">MM/YY</string>
    <string name="ccv">CCV</string>
    <string name="pay">Pay</string>
    <string name="cancels">Cancel" "</string>
    <string name="and_go_back">&amp; go back</string>
    <string name="booking_id">Booking ID</string>
    <string name="food_pickup_number">Food Pickup Number</string>
    <string name="how_to_pickup_food">How to pickup food</string>
    <string name="seats">Seats</string>
    <string name="cancel_n_reservation">Cancel \n Reservation</string>
    <string name="resend_n_email">Resend \n Email</string>
    <string name="your_booking_was_successful">Your booking was successful</string>
    <string name="booking_added_to_your_wallet">Booking added to your Wallet</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="total_ticket_price">Total Ticket Price</string>
    <string name="profile">Profile</string>
    <string name="booking">Bookings</string>
    <string name="preferences">Preferences</string>
    <string name="recharge_wallet">Recharge Wallet</string>
    <string name="history">History</string>
    <string name="your_upcoming_bookings">Your Upcoming Bookings</string>
    <string name="your_bookings_history">Your Order History</string>
    <string name="modifi_seat">Choosing Yes will reset your current selections.</string>
    <string name="food_pickup_info">Food Pickup Info</string>
    <string name="edit">Edit</string>
    <string name="city">City</string>
    <string name="your_preferences">Your Preferences</string>
    <string name="choose_your_preference_from_the_below_options_n_to_help_us_personalize_your_experience">Choose your preference from the below options \n to help us personalize your experience.</string>
    <string name="save">Save</string>
    <string name="recharge_your_wallet">Recharge Your Wallet</string>
    <string name="amount">Amount</string>
    <string name="choose_your_preferred_amount_to_recharge">Choose your preferred amount to recharge.</string>
    <string name="select_amount">Select Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="choose_your_preferred_payment_method">Choose your preferred payment method.</string>
    <string name="gift_card">Gift Card</string>
    <string name="kent">KNET</string>
    <string name="credit_card">Credit Card</string>
    <string name="sign_out">Sign Out</string>
    <string name="refunds">Refunds</string>
    <string name="your_refunded_credits">Your Refunded Credits</string>
    <string name="your_booking_history">Your Order History</string>
    <string name="category">Category</string>
    <string name="paid_by_club_card">Paid By </string>
    <string name="mad_n_monday">MAD \n MONDAY</string>
    <string name="movie_n_info">Movie Info</string>
    <string name="reset">Reset" " </string>
    <string name="all_filter">all Filter</string>
    <string name="select_seat_category">SELECT SEAT CATEGORY</string>
    <string name="select_seat_type">SELECT SEAT TYPE</string>
    <string name="ticket_quantity">Ticket Quantity</string>
    <string name="gift_card1">Gift Card?</string>
    <string name="gift_voucher">Gift Voucher</string>
    <string name="bank_offers">Bank Offers</string>
    <string name="by_clicking_proceed_i_agree_to_the">By clicking proceed, I agree to the</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="selected">Selected</string>
    <string name="modify_your">Modify your</string>
    <string name="other_showtimes">Other Showtimes</string>
    <string name="yes">Yes</string>
    <string name="yesComa">Yes,</string>
    <string name="are_you_sure">ARE YOU SURE ?</string>
    <string name="cancelling_will_restart_the_booking_process">Cancelling will restart the booking process</string>
    <string name="yes_i_m_sure">Yes, I\'m Sure</string>
    <string name="no_go_back">No, go back</string>
    <string name="send">Send</string>
    <string name="resend">Resend</string>
    <string name="sent_verification">We have sent a verification code to your email address.</string>
    <string name="enter_verification_code">ENTER VERIFICATION CODE</string>
    <string name="enterVerification">Enter verification code sent to your email address</string>
    <string name="submit">Submit</string>
    <string name="email_id">Email Id</string>
    <string name="transaction_date_time"><![CDATA[Transaction Date & Time]]></string>
    <string name="reference_id">Reference ID</string>
    <string name="track_number">Track Number</string>
    <string name="sorry_your_transaction">Sorry, Your transaction</string>
    <string name="failed">FAILED!</string>
    <string name="payment_fail">Your reservation was unsuccessful, Kindly contact your bank.</string>
    <string name="please_tell_us_why_you_are_deleting_you_account">Please tell us why you are deleting you account</string>
    <string name="i_prefer_to_be_anonymous">I prefer to be anonymous</string>
    <string name="i_am_unhappy_with_cinescape">I am unhappy with cinescape</string>
    <string name="i_don_t_visit_cinescape_any_more">I don\'t visit cinescape any more</string>
    <string name="or_write_to_us">Or write to us.</string>
    <string name="deleting_your_account_will_delete_your_profile_details_and_booking_history">Deleting your account will delete your profile details and booking history</string>
    <string name="to_delete_your_account_type_your_email_address_and_confirm">To delete your account, type your email address and confirm</string>
    <string name="type_your_email_address">Type your email address</string>
    <string name="confirm_deletion">Confirm Deletion</string>
</resources>